android: Add day records through REST